2017-01-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset.read):

	- Don't fail on verifying time sorting if our array is too short to do
	so

	* typhon/datasets/tovs.py(HIRS):

	(._read):

	- Throw out scanlines where the time is bad.  Masking is not enough;
	time series processing tools such as xarray assume sequential time so
	enforcing this makes life muc heasier later on

	(.filter_firstline):

	- Change message from debug to warning if GFL DB cannot be read.

	(.apply_flags):

	- Flag times when qidonotuse is set, but do so if and only if the time
	at that point is inconsistent with either the preceding or the
	following scanline.  This gets rid of some (perhaps most?) instances
	where there are outliers in the time axis.

2017-01-09  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/datasets/dataset.py(Dataset.read):

	- Bugfix: do not crash if first granule empty or rejected.

	* typhon/datasets/tovs.py(HIRS.filter_firstline):

	- Don't make a copy, just read into memory already.  Certainly don't
	make a copy every time, this is a dramatic slowdown.

2017-01-09  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/datasets/dataset.py(Dataset.read):

	- when sorted data are requested, verify that granule N starts after
	granule N-1 finishes.  If this is not the case, raise an error.

	* typhon/datasets/tovs.py(HIRS.filter_firstline):

	- When firstline db is locked, make a temporary copy and try again to
	read.

2017-01-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS):

	(.filter_firstlines) (.update_firstline_db):

	- Fix bug where I used the index in the file to create the firstline
	db, but the hrs_scnlin field to apply it.  This lead to errors in
	cases where there are gaps in hrs_scnlin in the early part of the
	file, and thus to folds in the time field and remaining duplicate
	lines.

2016-12-19  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:
