@@ -1,4 +1,12 @@
-2017-01-10  Gerrit Holl  <g.holl@reading.ac.uk>
+7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>
+
+201	* typhon/datasets/tovs.py(HIRS):
+
+	(._read):
+
+	- Throw out anyone who doesn't want to stand in line nicely
+
+7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/dataset.py:
 
